# Standby-bot

./: pyproject.toml
bot/: domain.py  main.py
bot/archive/: create_scripts.py  giveaways.py
bot/cogs/: admin.py  awards.py  bingo.py  birthdays.py  burger.py  error_handler.py  fun.py  giveaways.py  gpt.py  guild_events.py  hangman.py  leaderboard.py  logs.py  member_handler.py  message_handler.py  predictions.py  quiz.py  rando.py  rating.py  reaction_handler.py  reposts.py  roulette.py  rules.py  services.py  starboard.py  tickets.py  timers.py  voice.py
bot/config/: constants.py  domain.py  startup.py
bot/db_integration/: create_scripts.py  db_functions.py
bot/postgres/: architecture.py  setup.py
bot/utils/: regex.py  starboard.py  util_functions.py  warframe.py
