[tool.poetry]
authors = [
  "Derevin <https://github.com/Derevin/>",
  "Feldraas <https://github.com/Feldraas/>",
]
description = "This is a Discord bot made primarly for the Vie for the Void discord server."
license = "MIT"
name = "standby-bot"
package-mode = false
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
asyncpg = "^0.29.0"
fuzzywuzzy = "^0.18.0"
nextcord = "^2.6.0"
pillow = "^10.3.0"
psycopg2 = "^2.9.9"
pynacl = "^1.5.0"
python = "3.12.3"
python-dotenv = "^1.0.1"
python-levenshtein = "^0.25.1"
pytz = "^2024.1"
requests = "^2.31.0"
ruff = "^0.5.4"
setuptools = "^70.0.0"
sqlalchemy = "^2.0.30"
transliterate = "^1.10.2"

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "^0.29.1"
ipykernel = "^6.29.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
src = ["bot"]
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "ANN101",
  "ANN102",
  "TCH002",
  "ASYNC",
  "B008",
  "BLE001",
  "C408",
  "DTZ",
  "E722",
  "G004",
  "INP001",
  "PD",
  "PERF203",
  "PLR0913",
  "PLW1508",
  "RUF012",
  "S",
  "TD002",
  "TD003",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"bot/cogs/*.py" = ["D101", "D107"]
"bot/utils/regex.py" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
