[tool.poetry]
authors = [
  "Derevin <https://github.com/Derevin/>",
  "Feldraas <https://github.com/Feldraas/>",
]
description = "This is a Discord bot made primarly for the Vie for the Void discord server."
license = "MIT"
name = "standby-bot"
package-mode = false
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
asyncpg = "^0.30.0"
fuzzywuzzy = "^0.18.0"
nextcord = "^3.0.1"
pillow = "^10.3.0"
psycopg = "^3.2.4"
pynacl = "^1.5.0"
python = "3.12.3"
python-dotenv = "^1.0.1"
python-levenshtein = "^0.26.1"
pytz = "^2024.1"
requests = "^2.31.0"
setuptools = "^70.0.0"
sqlalchemy = "^2.0.30"
transliterate = "^1.10.2"

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "^0.30.0"
ipykernel = "^6.29.4"
ruff = "^0.11.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
src = ["bot"]
target-version = "py312"
output-format = "concise"

[tool.ruff.lint]
ignore = [
  "ANN101",
  "ANN102",
  "TCH002",
  "ASYNC",
  "B008",
  "BLE001",
  "C408",
  "DTZ",
  "E722",
  "G004",
  "INP001",
  "PD",
  "PERF203",
  "PLR0913",
  "PLW1508",
  "RUF012",
  "S",
  "TRY300",
  "TD002",
  "TD003",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"bot/archive/*" = ["ALL"]
"bot/cogs/*.py" = ["D101", "D107"]
"bot/utils/regex.py" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
